# bbDsl

./: CLAUDE.md  LICENSE  LICENSING.md  README-bcc.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/prompts/: create-prd.md  sTitle.md
.workspace_tools/: convert_docx_to_md.py
bbdsl/: __init__.py
bbdsl/cli/: __init__.py  main.py  registry_client.py
bbdsl/core/: __init__.py  comparator.py  dealer_bridge.py  expander.py  hand_generator.py  loader.py  quiz_generator.py  selector.py  sim_engine.py  validator.py
bbdsl/exporters/: ai_kb_exporter.py  bboalert_exporter.py  bml_exporter.py  convcard_exporter.py  html_exporter.py  pbn_exporter.py  quiz_exporter.py  svg_tree.py
bbdsl/importers/: bboalert_importer.py  bml_importer.py
bbdsl/models/: __init__.py  bid.py  common.py  context.py  convention.py  system.py
process/1-discover/: AIAid.md  BBDSL-SCHEMA-v0.2.md  BBDSL-SCHEMA.md  BBDSL_IMPLEMENTATION-PLAN.md  BCC_gemini.md  BidSysDSL.md  Bridge Communication Calculus_deep-research-report.md  BridgeCommunicationCalculus.md  BridgeDslResearch_gpt.md  CHANGELOG-v0.1-to-v0.2.md  SURVEY-REPORT.md  bbdsl-schema-v0.2.json  bbdsl-schema.json  deep-research-report.md  sayc.bbdsl.yaml  usedDSLs.md  usedDSLs_gemini.md  usedDSLs_gpt.md  橋牌通信微積分：以 Bridge Communication Calculus 概念文為基礎的深度研究報告.docx
process/2-clarify/: 0227-1.md  0228.md
prompts/e2e/: 00-資料表及遷移分析.md  01-Feature-to-測試樣板.md  02-紅燈.md  03-綠燈.md  04-重構.md  架構決策文件.md
prompts/rules/: 程式架構規範.md
schema/: bbdsl-v0.3-generated.json
tests/: conftest.py
(+50 files in other folders)
